--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,14 @@
    	</plugins>
   </build>
        <repositories>
-		<repository>
-			<releases>
-			</releases>
-			<snapshots>
-			</snapshots>
-			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/content/repositories/releases/</url>
-		</repository>
+		   <repository>
+			   <id>spigot-repo</id>
+			   <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		   </repository>
+		   <repository>
+			   <id>jitpack.io</id>
+			   <url>https://jitpack.io</url>
+		   </repository>
 		<repository>
 			<releases>
 			</releases>
@@ -56,22 +56,21 @@
 	</repositories>
   
   <dependencies>
+	  <dependency>
+		  <groupId>org.spigotmc</groupId>
+		  <artifactId>spigot-api</artifactId>
+		  <version>1.14.4-R0.1-SNAPSHOT</version>
+		  <scope>provided</scope>
+	  </dependency>
   	<dependency>
   		<groupId>us.dynmap</groupId>
   		<artifactId>dynmap-api</artifactId>
   		<version>2.1</version>
   	</dependency>
-  	<dependency>
-  		<groupId>org.bukkit</groupId>
-  		<artifactId>bukkit</artifactId>
-  		<version>1.8-R0.1-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>me.ryanhamshire</groupId>
-  		<artifactId>GriefPrevention</artifactId>
-  		<version>9.2</version>
-  		<scope>system</scope>
-  		<systemPath>${project.basedir}/GriefPrevention-9.2.jar</systemPath>
-  	</dependency>
+	  <dependency>
+		  <groupId>com.github.TechFortress</groupId>
+		  <artifactId>GriefPrevention</artifactId>
+		  <version>16.12.0</version>
+	  </dependency>
   </dependencies>
 </project>
