--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,4 +3,5 @@ main: org.dynmap.griefprevention.DynmapGriefPreventionPlugin
 version: "${project.version}"
 author: mikeprimm
 depend: [ dynmap, GriefPrevention ]
+api-version: 1.13
 
